--- a/configs/star_defconfig
+++ b/configs/star_defconfig
@@ -56,6 +56,7 @@ CONFIG_FASTBOOT_BUF_SIZE=0x5000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
+CONFIG_DM_I2C_GPIO=y
 CONFIG_SYS_I2C_TEGRA=y
 CONFIG_BUTTON_KEYBOARD=y
 CONFIG_DM_PMIC=y
@@ -77,3 +78,4 @@ CONFIG_VIDEO=y
 # CONFIG_VIDEO_LOGO is not set
 # CONFIG_VIDEO_BPP8 is not set
 CONFIG_VIDEO_TEGRA20=y
+CONFIG_BACKLIGHT_AAT2870=y
