board: samsung: n1: add Samsung Galaxy R (GT-I9103) support
Signed-off-by: Ion Agorria <ion@agorria.com>

--- a/arch/arm/mach-tegra/tegra20/Kconfig
+++ b/arch/arm/mach-tegra/tegra20/Kconfig
@@ -55,6 +55,10 @@ config TARGET_STAR
 	bool "LG Tegra20 Star board"
 	select BOARD_LATE_INIT
 
+config TARGET_SAMSUNG_N1
+	bool "Samsung Tegra20 N1 board"
+	select BOARD_LATE_INIT
+
 config TARGET_TEC
 	bool "Avionic Design Tamonten Evaluation Carrier"
 	select BOARD_LATE_INIT
@@ -90,6 +94,7 @@ source "board/acer/picasso/Kconfig"
 source "board/avionic-design/plutux/Kconfig"
 source "board/nvidia/seaboard/Kconfig"
 source "board/lg/star/Kconfig"
+source "board/samsung/n1/Kconfig"
 source "board/avionic-design/tec/Kconfig"
 source "board/asus/transformer-t20/Kconfig"
 source "board/compulab/trimslice/Kconfig"
