--- a/arch/arm/dts/tegra30.dtsi
+++ b/arch/arm/dts/tegra30.dtsi
@@ -373,6 +373,34 @@
 		*/
 	};
 
+	/* Audio Bitstream Engine */
+	bsea@60011000 {
+		compatible = "nvidia,tegra20-bsea";
+		reg = <0x60011000 0x1000>, <0x4000C000 0x4000>;
+		reg-names = "bsea", "iram-buffer";
+		interrupts = <GIC_SPI 11 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "bsea";
+		clocks = <&tegra_car TEGRA30_CLK_BSEA>;
+		resets = <&tegra_car 62>;
+		reset-names = "engine";
+		status = "disabled";
+	};
+
+	/* Video Bitstream Engine */
+	bsev@6001b000 {
+		compatible = "nvidia,tegra20-bsev";
+		reg = <0x6001b000 0x1000>, <0x40008000 0x4000>;
+		reg-names = "bsev", "iram-buffer";
+		interrupts = <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "bsev";
+		clocks = <&tegra_car TEGRA30_CLK_BSEV>,
+				 <&tegra_car TEGRA30_CLK_VDE>;
+		resets = <&tegra_car 63>,
+				 <&tegra_car 61>;
+		reset-names = "engine", "vde";
+		status = "disabled";
+	};
+
 	apbmisc@70000800 {
 		compatible = "nvidia,tegra30-apbmisc", "nvidia,tegra20-apbmisc";
 		reg = <0x70000800 0x64   /* Chip revision */
