--- a/arch/arm/dts/tegra20-samsung-n1.dts
+++ b/arch/arm/dts/tegra20-samsung-n1.dts
@@ -3,154 +3,14 @@
 
 #include <dt-bindings/input/input.h>
 
-#include "tegra20.dtsi"
+#include "tegra20-samsung-n1-common.dtsi"
 
 / {
 	model = "Samsung Galaxy R (GT-I9103)";
 	compatible = "samsung,n1", "nvidia,tegra20";
 
-	chosen {
-		stdout-path = &uartb;
-	};
-
-	aliases {
-		i2c0 = &pwr_i2c;
-
-		mmc0 = &sdmmc4;	/* eMMC */
-		mmc1 = &sdmmc3; /* uSD slot */
-
-		rtc0 = &pmic;
-		rtc1 = "/rtc@7000e000";
-
-		usb0 = &micro_usb;
-	};
-
-	memory {
-		device_type = "memory";
-		reg = <0x00000000 0x40000000>; /* 1 GB */
-	};
-
-	uartb: serial@70006040 {
-		clocks = <&tegra_car 7>;
-		status = "okay";
-	};
-
-	pwr_i2c: i2c@7000d000 {
-		status = "okay";
-		clock-frequency = <400000>;
-
-		pmic: max8907@3c {
-			compatible = "maxim,max8907";
-			reg = <0x3c>;
-
-			interrupts = <GIC_SPI 86 IRQ_TYPE_LEVEL_HIGH>;
-			#interrupt-cells = <2>;
-			interrupt-controller;
-
-			#gpio-cells = <2>;
-			gpio-controller;
-
-			maxim,system-power-controller;
-
-			regulators {
-				vdd_1v8_vio: sd3 {
-					regulator-name = "vcc_1v8_io";
-					regulator-min-microvolt = <1800000>;
-					regulator-max-microvolt = <1800000>;
-					regulator-always-on;
-					regulator-boot-on;
-				};
-
-				// check if/where needed
-				iovcc_1v8_lcd: ldo3 {
-					regulator-name = "vcc_1v8_lcd";
-					regulator-min-microvolt = <1800000>;
-					regulator-max-microvolt = <1800000>;
-					regulator-always-on;
-					regulator-boot-on;
-				};
-
-				avdd_3v3_usb: ldo4 {
-					regulator-name = "avdd_3v3_usb";
-					regulator-min-microvolt = <3300000>;
-					regulator-max-microvolt = <3300000>;
-					regulator-always-on;
-					regulator-boot-on;
-				};
-
-				// check if/where needed
-				vdd_3v0_lcd: ldo12 {
-					regulator-name = "vdd_3v0_lcd";
-					regulator-min-microvolt = <3000000>;
-					regulator-max-microvolt = <3000000>;
-					regulator-boot-on;
-				};
-
-				vdd_usd: ldo16 {
-					regulator-name = "vcc_3v3_usd";
-					regulator-min-microvolt = <3300000>;
-					regulator-max-microvolt = <3300000>;
-					regulator-boot-on;
-				};
-			};
-		};
-	};
-
-	micro_usb: usb@c5000000 {
-		status = "okay";
-		dr_mode = "otg";
-	};
-
-	usb-phy@c5000000 {
-		status = "okay";
-		vbus-supply = <&avdd_3v3_usb>;
-	};
-
-	sdmmc3: sdhci@c8000400 {
-		status = "okay";
-		bus-width = <4>;
-
-		vmmc-supply = <&vdd_usd>;
-		vqmmc-supply = <&vdd_1v8_vio>;
-	};
-
-	sdmmc4: sdhci@c8000600 {
-		status = "okay";
-		bus-width = <8>;
-		non-removable;
-
-		vmmc-supply = <&vdd_3v3_sys>;
-		vqmmc-supply = <&vdd_1v8_vio>;
-	};
-
-	/* 32KHz oscillator which is used by PMC */
-	clk32k_in: clock-32k-in {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <32768>;
-		clock-output-names = "ref-oscillator";
-	};
-
 	gpio-keys {
 		compatible = "gpio-keys";
-
-		key-power {
-			label = "Power";
-			gpios = <&gpio TEGRA_GPIO(U, 5) GPIO_ACTIVE_HIGH>;
-			linux,code = <KEY_ENTER>;
-		};
-
-		key-volume-up {
-			label = "Volume Up";
-			gpios = <&gpio TEGRA_GPIO(Q, 1) GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_UP>;
-		};
-
-		key-volume-down {
-			label = "Volume Down";
-			gpios = <&gpio TEGRA_GPIO(Q, 2) GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_DOWN>;
-		};
 
 		key-home {
 			label = "Home";
@@ -159,15 +19,6 @@
 		};
 	};
 
-	vdd_3v3_sys: regulator-3v3 {
-		compatible = "regulator-fixed";
-		regulator-name = "vdd_3v3_vs";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		regulator-always-on;
-	};
-
-// Video modelling
 #if 0
 	host1x@50000000 {
 		dc@54200000 {
@@ -198,8 +49,6 @@
 
 		power-supply = <&vdd_pnl_reg>;
 		enable-gpios = <&gpio>;
-
-		backlight = <&backlight>; // backlight is controlled by the bridge
 
 		display-timings {
 			timing@0 {
