--- a/configs/n1_defconfig
+++ b/configs/n1_defconfig
@@ -3,11 +3,9 @@ CONFIG_ARCH_TEGRA=y
 CONFIG_SUPPORT_PASSING_ATAGS=y
 CONFIG_CMDLINE_TAG=y
 CONFIG_INITRD_TAG=y
-CONFIG_TEXT_BASE=0x00110000
 #CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x3000
 CONFIG_ENV_OFFSET=0xFFFFD000
-CONFIG_DEFAULT_DEVICE_TREE="tegra20-samsung-n1"
 CONFIG_SPL_STACK=0xffffc
 CONFIG_SPL_TEXT_BASE=0x00108000
 CONFIG_SYS_LOAD_ADDR=0x2000000
@@ -19,7 +17,7 @@ CONFIG_BOOTDELAY=0
 CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_KEYED_CTRLC=y
 CONFIG_OF_SYSTEM_SETUP=y
-CONFIG_BOOTCOMMAND="fastboot usb 0"
+CONFIG_BOOTCOMMAND="bootflow scan 0; fastboot usb 0; poweroff;"
 CONFIG_SYS_PBSIZE=2085
 CONFIG_SPL_FOOTPRINT_LIMIT=y
 CONFIG_SPL_MAX_FOOTPRINT=0x8000
@@ -28,7 +26,6 @@ CONFIG_SPL_SYS_MALLOC=y
 CONFIG_SPL_HAS_CUSTOM_MALLOC_START=y
 CONFIG_SPL_CUSTOM_SYS_MALLOC_ADDR=0x90000
 CONFIG_SPL_SYS_MALLOC_SIZE=0x10000
-CONFIG_SYS_PROMPT="Tegra20 (N1) # "
 # CONFIG_CMD_BOOTEFI_BOOTMGR is not set
 CONFIG_CMD_BOOTMENU=y
 # CONFIG_CMD_IMI is not set
@@ -78,3 +75,5 @@ CONFIG_USB_GADGET_MANUFACTURER="Samsung"
 CONFIG_USB_GADGET_VENDOR_NUM=0x04e8
 CONFIG_USB_GADGET_PRODUCT_NUM=0x685F
 CONFIG_CI_UDC=y
+CONFIG_AUTOBOOT_KEYED=y
+CONFIG_AUTOBOOT_KEYED_CTRLC=y
