dm: crypto: Create AES uclass

--- a/drivers/crypto/Makefile
+++ b/drivers/crypto/Makefile
@@ -3,6 +3,7 @@
 # Copyright (c) 2013 Samsung Electronics Co., Ltd.
 #	http://www.samsung.com
 
+obj-$(CONFIG_AES) += aes_uclass.o
 obj-$(CONFIG_EXYNOS_ACE_SHA)	+= ace_sha.o
 obj-y += rsa_mod_exp/
 obj-y += fsl/
