--- a/board/samsung/n1/configs/bose_vendor_chainloaded.config
+++ b/board/samsung/n1/configs/bose_vendor_chainloaded.config
@@ -3,3 +3,5 @@ CONFIG_SYS_PROMPT="Tegra20 (Bose) # "
 CONFIG_SKIP_LOWLEVEL_INIT=y
 CONFIG_TEXT_BASE=0x00A00800
 #CONFIG_OF_BOARD_SETUP is not set
+CONFIG_FASTBOOT_BUF_ADDR=0x40008000
+CONFIG_FASTBOOT_BUF_SIZE=0x18000
