--- a/board/qualcomm/phone.config
+++ b/board/qualcomm/phone.config
@@ -16,3 +16,13 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_S3908=y
 
 # for sm8250
 # CONFIG_TEXT_BASE=0xa0080000
+
+CONFIG_CMD_UFETCH=y
+
+CONFIG_AUTOBOOT_MENU_SHOW=y
+# CONFIG_BOOTMENU_DISABLE_UBOOT_CONSOLE is not set
+
+#CONFIG_USB_FUNCTION_FASTBOOT=y
+#CONFIG_FASTBOOT_BUF_ADDR=0xa8000000
+#CONFIG_FASTBOOT_BUF_SIZE=0x8000000
+#CONFIG_FASTBOOT_OEM_RUN=y
